Prepare for 3.0-alpha